playground/test/test_all.txt
###フェーズ1（真偽値と短絡評価）
0 & 1
[Main Result] 1

!_
[Main Result] Infinity

_ & 100
[Main Result] Unit

###フェーズ2（リストの次元操作と随伴関手）
[1 2] [3 4]
[Main Result] [ 1, 2, 3, 4 ]

list : 1 2 , 3 4
[Main Result] [ [ 1, 2 ], [ 3, 4 ] ]

list : 1 2 , 3 4
list ' 0
[Main Result] [ 1, 2 ]

list : 1 2 , 3 4
list ' 1
[Main Result] [ 3, 4 ]

list : 1 2 , 3 4
list ' 3
[Main Result] Unit


[1 2 , 3 4]~
[Main Result] [ 1, 2, 3, 4 ]

###フェーズ3（左辺優先規則による型変換）
0 + `123`
[Main Result] 123

x : `123` + 0
[Main Result] Unit　※構文エラー

x : `123` 0
[Main Result] `1230`

###フェーズ4：システムセマンティクスとポインタ操作（System Semantics）
x : 10
$x # 20
x
★★期待値20だが返却10。xがアドレスだと期待値なので保留？

0x1000 : 10
0x1000 # 20
@0x1000
[Main Result] 20

###フェーズ5（クロージャと環境キャプチャ）
f : x ? y ? x + y
addTen : f 10
addTen 20
[Main Result] 30

###フェーズ6（IOとシステムセマンティクス）
0x100 # 777 
@0x100`
[Main Result] 777

###辞書型/MatchCaseテスト（修正ステップC）

dict :
	x : 10
	y : 5
	z : 30

f : foo ? 
	foo~
		x > 0 :
			xy : x * y
			xz : x * z
		x < 1 :
			x # |x| + 5
			f foo

f dict
[Main Result] [
  xy : 50
  xz : 300
]


dict :
	x : -10
	y : 5
	z : 30

f : foo ? 
	foo~
		x > 0 :
			xy : x * y
			xz : x * z
		x < 1 :
			x # |x| + 5
			f foo

f dict
[Main Result] [
  xy : 75
  xz : 450
]

`##############################################

`============================ 
` fix : list_concat flat/lift
`============================ 
[[1 2] [3 4]]~
[Main Result] [ 1, 2, 3, 4 ]

a : 1 2 3 4 5
~a
[Main Result] [ [ 1, 2, 3, 4, 5 ] ]

~10
[Main Result] [ 10 ]

10~
[Main Result] 10

@$10
[Main Result] 10

a : 10
a_address : $a
@a_address
[Main Result] 10
★★要確認★★　[Main Result] 0

`============================ 
` fix : map/fold
`============================ 
[+] 1 2 3 4 5
[Main Result] 15

[* 2,] 1 2 3 4 5
[Main Result] [ 2, 4, 6, 8, 10 ]

[* 2,] [+] 1 2 3 4 5
[Main Result] 30

`============================ 
` fix : char
`============================ 
\a
[Main Result] 'a'

0u00f0
[Main Result] 'ð'

`============================ 
` fix : Spread/Rest
`============================ 
[ 1 , [2, 3]~ , 4 ]
[Main Result] [ 1, 2, 3, 4 ]

[ 1 , [2, 3]~ 4 ]
[Main Result] [ 1, [ [ 2, 3 ], 4 ] ]

[ 1 [2, 3]~ , 4 ]
[Main Result] [ [ 1, 2, 3 ], 4 ]

[ 1 [2, 3]~ 4 ]
[Main Result] [ 1, 2, 3, 4 ]

`============================ 
` fix : #output 'get
`============================ 
myGreet :
	hello : `hello,`
	welcome : `welcome,`
myGreet ' hello
[Main Result] `hello,`
★★要確認★★　[Main Result] Unit

ptr : $10
ptr # 99
@ptr
[Main Result] 99

`============================ 
` fix : match_case deep_eq
`============================ 
a : [1, [2, 3]]
b : [1, [2, 3]]
a = b
[Main Result] [ 1, [ 2, 3 ] ]　※Trueなので値そのまま返す

myMatch : x ?
	0 : `zero`
	1 : `one`
	`other`
myMatch 99
[Main Result] `other`

myMatch : x ?
	0 : `zero`
	1 : `one`
	`other`
myMatch 0
[Main Result] `zero`

myMatch : x ?
	0 : `zero`
	1 : `one`
	`other`
myMatch 1
[Main Result] `one`

`============================ 
` fix : 'get
`============================ 
myDict :
	`key1` : `value_one`
	`key2` : `value_two`
target : `key2`
myDict ' target
[Main Result] `value_two`

complexDict :
	[1, 2] : `Pattern A`
	[3, 4] : `Pattern B`
complexDict ' [1, 2]
[Main Result] [ `Pattern A` ]

`============================ 
` get Head/Tail
`============================ 
getHead : a ~b ? a
getHead [1, 2, 3]
[Main Result] 1

getTail : a ~b ? b
getTail [1, 2, 3]
[Main Result] [ 2, 3 ]

`##############################################
` playground\bak_v0 作成時のテスト一部
`##############################################
`テストケース1：複数のマクロの連続合成
foo : [+ 4]
bar : [* 3]
baz : 2
foo bar baz
[Main Result] 18

add_ten : [+ 10]
mul_two : [* 2]
sub_five : [- 5]
add_ten mul_two sub_five 5
[Main Result] 25

`テストケース2：無名リスト（ブロック）の直接パイプライン
[+ 4] [* 3] [/ 2] 10
[Main Result] 21

`テストケース4：中置演算子とパイプラインの混在
double : [* 2]
square : [^ 2]
double square (3 + 2)
[Main Result] 100

`テストケース5：複数の出力命令（副作用の確認）
foo : [+ 10]
bar : [* 5]
foo 5
bar 4
[Main Result] 20

`##############################################
` 細かいバグ修正　テスト
`##############################################

`============================================
` 参考　\関連の比較
`============================================
` === 1. 文字 (Char) の基本的な等価比較 === `
\A = \A
[Main Result] 'A'

\a != \b
[Main Result] 'a'

` === 2. 特殊文字 (改行やタブ) の生成と解釈確認 === `
` ※パーサーが \n を改行コードと解釈するか、'n'と解釈するか確認します `
\n = \n
[Main Result] 'n'

\t != \n
[Main Result] 't'

` === 3. 文字列 (String) の基本的な等価比較 === `
(`abc` = `abc`)
[Main Result] `abc`

(`hello`) != `world`
[Main Result] `world`

` === 4. 改行を含んだ文字列の比較 === `
x : `abc` \
	`def` = `abc` \
	`def`
[Main Result] `abc
def`

`abc` \
	`def` = `abc` \
	`def`
[Main Result] Unit

(`abc` \
	`def` = `abc` \
	`def`)
[Main Result] `abc
def`

` === 5. 文字と文字列のリスト化 (コンスセル結合) === `
\A , `bc`
[Main Result] [ 'A', `bc` ]

` === 6. 暗黙のシーケンスによる結合 (現在の実装確認) === `
`現在のWASM版では、[文字列 Float] のみ特殊な結合処理が入っています`
(`Result: ` 123)
[Main Result] `Result: 123`

`============================================
` 文字列改行の出力
`============================================
f : s t ?
	s :
	@s \
	@t
f $`Hello` $`Sign`
[Main Result] `Hello
Sign`

`============================================
` プレースホルダー (Unit) の挙動確認
`============================================
div : x y ? x / y
div2 : div _ 2
div2_type : div2
Result : div2 10
[Main Result] 5

`============================================
` 再帰呼出しの挙動確認
`============================================
`①意図通りに動く`
fact: n ?
	n=0: 1
	(fact (n - 1)) * n
fact 5
[Main Result] 120

`②評価値がリストになる→修正済`
fact: n ?
	n=0:1
	(fact (n - 1)) *n
fact 5
[Main Result] 120

`③評価値が関数オブジェクトになる？`
fact: n ?
	n=0:1
	n * fact ( n - 1 )
fact 5
[Main Result] [ <Function: 5>, 4 ]


`④意図通り`
fact: n ?
	n=0:1
	n * (fact ( n - 1 ))
fact 5
[Main Result] 120

`⑤なぞのバグり方 引数がそのまま評価値になる？→修正済`
fact: n ?
	n=0:1
	n * (fact (n-1))
fact 5
[Main Result] 120

`============================================
` 絶対値と中置or混在パターンの確認
`============================================
`空白で絶対値と中置orを区別した例
`空白なしの_||-4*2+3|+5<0|3 だとエラーになる
_ | |-4*2+3| + 5 < 0 | 3
[Main Result] 3　※_ OR (|-4*2+3| + 5 < 0) OR 3 となり、_ | _ | 3　と簡約、true値3が返る


`空白位置で結果が変わる例
-5*|-4*2+3|/2<0|3
[Main Result] Unit

-5* |-4*2+3| /2<0 | 3
[Main Result] -12.5

-5* |-4*2+3|/2<0 | 3
[Main Result] -1.06099789746e-313

-5*|-4*2+3|/2<0 | 3
[Main Result] 3

`============================ 
` 特殊なN進数/文字リテラルの検証 (0x, 0r, 0u)
`============================ 
` === 1. 0x... (16進数) ===
0x10
[Main Result] 16

0xFF
[Main Result] 255

` === 2. 0r... (生の16進数表現) ===
` ast_normalizer.js では base 16 として処理される想定
0r10
[Main Result] 16

0rFF
[Main Result] 255

` === 3. 0u... (Unicode文字) ===
` 0u0041 は 'A' (10進数で65) として解釈される想定
0u0041
[Main Result] 'A'

` === 4. 文字等価性の連鎖検証 ===
` 0u, \ (バックスラッシュ), および通常の文字が一致するか
0u0041 = \A
[Main Result] 'A'

// ==========================================
// 派生ジェネレータ(Range) 3項セット テスト
// ==========================================
1 ~ 5
[Main Result] [ 1, 2, 3, 4, 5 ]
★★要確認★★　現状は上記の動作で許容するが、将来的に明示的な[]が無い場合は構文エラーにするかも

` 糖衣構文 (1ずつ増える)
[-2 ~ 3]
[Main Result] [ -2, -1, 0, 1, 2, 3 ]
[1 + 2 - 5 ~ 6]
[Main Result] [ -2, -1, 0, 1, 2, 3, 4, 5, 6 ]
[10 ~ 5]
[Main Result] Unit

` 等差ジェネレータ
[0 ~+ 2.5 ~ 10]
[Main Result] [ 0, 2.5, 5, 7.5, 10 ]
[0 ~+ 10]
Error: [Demo Limitation] Infinite lists like 'A ~+ B' are not supported in the WASM demo. Please append '~ MaxValue' to slice it into a finite list.
[10 ~+ 2 ~ 0]
[Main Result] Unit

` 減算ジェネレータ
[10 ~- 2.5 ~ 1]
[Main Result] [ 10, 7.5, 5, 2.5 ]
[5 ~- 1]
Error: [Demo Limitation] Infinite lists like 'A ~- B' are not supported in the WASM demo. Please append '~ MaxValue' to slice it into a finite list.

` 乗算ジェネレータ
[1 ~* 2 ~ 16]
[Main Result] [ 1, 2, 4, 8, 16 ]
[1 ~* 2.5 ~ 16]
[Main Result] [ 1, 2.5, 6.25, 15.625 ]
[1 ~* 16]
Error: [Demo Limitation] Infinite lists like 'A ~* B' are not supported in the WASM demo. Please append '~ MaxValue' to slice it into a finite list.

` 除算ジェネレータ
[16 ~/ 2 ~ 1]
[Main Result] [ 16, 8, 4, 2, 1 ]
[10 ~/ 2.5 ~ 1]
[Main Result] [ 10, 4, 1.6 ]
[16 ~/ 2]
Error: [Demo Limitation] Infinite lists like 'A ~/ B' are not supported in the WASM demo. Please append '~ MaxValue' to slice it into a finite list.

` 冪乗ジェネレータ
[2 ~^ 2 ~ 256]
[Main Result] [ 2, 4, 16, 256 ]
[2 ~^ 256]
Error: [Demo Limitation] Infinite lists like 'A ~^ B' are not supported in the WASM demo. Please append '~ MaxValue' to slice it into a finite list.

` 四則演算が混在
[0 ~+ 2 ~ 10 + 4]
[Main Result] [ 0, 2, 4, 6, 8, 10, 12, 14 ]
[0 ~+ 2 - 1 ~ 5]
[Main Result] [ 0, 1, 2, 3, 4, 5 ]
[1 + 2 ~+ 2 ~ 11]
[Main Result] [ 3, 5, 7, 9, 11 ]

` ******************************************
` 比較・論理演算の「透過的」な評価挙動
` ******************************************
` Sign言語では、演算結果として人工的な `true(1)` を生成しません。
` 条件を満たした場合、「最後に評価されて真を確定させた値」がそのまま返ります。
` （※ 0 は「値が存在する（真）」として扱われます）
` （※ _(Unit) や [] は「値が存在しない（偽）」として扱われます）

` ==========================================
` 比較演算による値の透過（フィルタ処理）
` ==========================================
` Signの比較演算は、条件成立時に「右辺の評価値」をそのまま返します。
` 比較したい変数を右辺に置くことで、if文なしでフィルタ処理が書けます。

` --- 1. 等価 (=) と 不等価 (!=) ---
pass_eq  : x ? 10 = x
pass_eq 10
` 期待値: 10 (10と等しいので透過)

pass_eq  : x ? 10 = x
pass_eq 5
` 期待値: _  (条件不成立のため Unit)

pass_neq : x ? 10 != x
pass_neq 5
` 期待値: 5  (10以外なので透過)

` --- 2. 大小比較 (<, >) ---
` 常に右辺が返るため、左辺を基準に考えます。
pass_gt : x ? 5 < x
pass_gt 10
` 期待値: 10

pass_lt : x ? 5 > x
pass_lt 2
` 期待値: 2

` --- 3. 以上・以下 (<=, >=) ---
pass_ge : x ? 5 <= x
pass_ge 5
` 期待値: 5

pass_le : x ? 5 >= x
pass_le 5
` 期待値: 5


` ==========================================
` 論理演算によるフォールバックとガード処理
` ==========================================
` Signの論理演算も真偽値(true/false)ではなく値を透過させます。

` --- 1. 論理和 (|) によるデフォルト値設定 ---
` 左辺が真(値が存在する)ならそのまま左辺を返し、偽(Unit)なら右辺を返します。
set_default : x ? x | 100
set_default 50
` 期待値: 50 (値があるのでそのまま 50)

set_default : x ? x | 100
set_default _
` 期待値: 100 (値がないのでデフォルト値 100 が適用される)

` --- 2. 論理積 (&) によるガード処理 ---
` 左辺が真の場合のみ右辺を評価して返します。
` 値が存在する場合だけ後続の計算を行わせる安全な処理が書けます。
calc_if_exists : x ? x & (x * 10)
calc_if_exists 5
` 期待値: 50 (値があるので右辺の計算結果が返る)

calc_if_exists : x ? x & (x * 10)
calc_if_exists _
` 期待値: _  (値がないので短絡評価され Unit が返る)


` ==========================================
` 単項演算子（否定）の反転挙動
` ==========================================
` 否定(!)は、値が存在すれば無(Unit)にし、無であれば全域(Infinity)にします。

is_empty : x ? !x
is_empty 100
` 期待値: _ (値が存在するため偽値に反転)

is_empty : x ? !x
is_empty _
` 期待値: Infinity (WASM仕様: 無の反転として Infinity が返る)

